--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
 <head>
 	<title>JoshLibs</title>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
+
 <body ng-app="libApp">
+<div id="navbar">
+	<a href="#!/input"><header>Mad Libs <span>Dark</span></header></a>
+</div>
+
+<div id="eyes">
+	<span class="glyphicon glyphicon-eye-open"></span>
+	<span class="glyphicon glyphicon-eye-open"></span>
+</div>
 
 	<ng-view></ng-view>
 
